# BlackHole_STD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  encapsulation.txt
doc/: BlackHoleRenderer.aux  BlackHoleRenderer.tex  GR.aux  GR.tex  method.aux
include/: CMakeLists.txt  OpenGLGeodesic.cpp  OpenGLGeodesic.h  OpenGLPostProcessing.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShaderInit.cpp  OpenGLShaderInit.h  OpenGLVolumeRender.cpp  OpenGLVolumeRender.h  Schwarzschild_march.cpp  Schwarzschild_march.h  accretion_disc.h  bloom.cpp  bloom.h  convolution.h  gauge_march.cpp  gauge_march.h  geodesic.cpp  geodesic.h  ray_march.cpp  ray_march.h  volume_render.cpp  volume_render.h
method/: GR.aux  GR.tex  method.tex
python/: output.tex  output_cfuncs.h  output_christoffel_sph.h  output_christoffel_sph.tex  output_gauge_sph_inv.h  symbolic.py  symbolic2.py
src/: CMakeLists.txt  Schwarzschild.cpp  Schwarzschild_Realtime.cpp  Swz_Realtime.cpp  Swz_Realtime_GL.cpp  Swz_Realtime_OMP.cpp  Swz_Realtime_old.cpp  geodesic.cpp  geodesic_test.cpp  window_test.cpp
src/shaders/: blur.frag  bright.frag  combine.frag  fragment_shader.glsl  geodesic_compute.comp  vertex_shader.glsl  volume_compute.comp
src/test/: bloom_test.cpp  geodesic_auto_test.cpp  geodesic_test.cpp  imgui_test.cpp  volume_render_test.cpp
